vlib/v/checker/tests/map_unknown_value.out
vlib/v/checker/tests/map_unknown_value.vv:2:23: error: unknown type `DoesNotExist`
    1 | struct App {
    2 |     my_map map[string]DoesNotExist
      |                       ~~~~~~~~~~~~
    3 | }
